# chessframework

./: CMakeLists.txt  includeSDL.h
gfx/: sprites.xcf
src/: Board.cpp  Board.h  BoardTest.h  CMakeLists.txt  Chess.cpp  Chess.h  ChessGraphics.cpp  ChessGraphics.h  Event.h  EventNode.h  GraphicsEvents.h  GraphicsSystem.cpp  GraphicsSystem.h  InputSystem.cpp  InputSystem.h  Keycode.h  Piece.cpp  Piece.h  PieceTypes.h  SDLUtility.h  System.h  Team.h  assets.h  cleanup.h  commandline.h  graphicsenum.h  includeSDL.h  main.cpp  primitives.h
